# simple-repo-ranker

./: .gitignore  README.md  action.yml  data.json  main.py  main.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ranking.yml
data/: data.json
docs/: index.html
docs/assets/: index-1dsgHGUL.js  index-B-FHA7OX.js  index-B1-p4v_b.js  index-BCIQ0cm_.js  index-BFa82G7z.js  index-BUmvdZ-w.js  index-BZwIcPWv.js  index-BamWa2lZ.js  index-BbE4Y1s2.js  index-Bl2-acL8.js  index-BwJwlvfq.js  index-C-aGj7jg.js  index-C49rJ5Q4.js  index-CSpkjP1x.js  index-CTXdrTrr.js  index-CkEZXqWm.js  index-Cm6ovfnu.js  index-D5moo76m.js  index-DAmlktwa.js  index-DEC2tME1.js  index-DTsp1Fx0.js  index-Des_yS0n.js  index-Dg8Karcz.js  index-DjmUwhgV.js  index-Dl6JqQ9K.js  index-FB-YWuwP.js  index-Io7mb0Lx.js  index-LoreIlNY.js  index-ZrOzS9AC.js  index-hTDJtqbz.js  index-ok1THZ0x.js
src/: App.jsx
src/components/ContributorTable/: index.jsx
src/components/RepoRow/: index.jsx
src/components/RepoTable/: index.jsx
